vpn/etc/iptables-rules
# Generated by iptables-save v1.4.21 on Sun Oct  5 03:03:09 2014
*nat
:PREROUTING ACCEPT [322:25542]
:INPUT ACCEPT [336:23237]
:OUTPUT ACCEPT [428:28108]
:POSTROUTING ACCEPT [428:28108]
-A PREROUTING -i ppp+ -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 1983
-A POSTROUTING -s 192.168.0.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -s 192.168.88.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -s 19.83.0.0/24 -o eth0 -j MASQUERADE
COMMIT
# Completed on Sun Oct  5 03:03:09 2014
# Generated by iptables-save v1.4.21 on Sun Oct  5 03:03:09 2014
*filter
:INPUT ACCEPT [794:63338]
:FORWARD ACCEPT [1034:266015]
:OUTPUT ACCEPT [1290:307000]
-A INPUT -p gre -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1723 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 53 -j DROP
-A INPUT -i eth0 -p udp -m udp --dport 53 -j DROP
-A INPUT -i eth0 -p tcp -m tcp --dport 1983 -j DROP
-A INPUT -i eth0 -p udp -m udp --dport 1983 -j DROP
COMMIT
# Completed on Sun Oct  5 03:03:09 2014
# Generated by iptables-save v1.4.21 on Sun Oct  5 03:03:09 2014
*mangle
:PREROUTING ACCEPT [8225:1348385]
:INPUT ACCEPT [5724:764960]
:FORWARD ACCEPT [2466:577950]
:OUTPUT ACCEPT [4628:1066445]
:POSTROUTING ACCEPT [7094:1644395]
COMMIT
# Completed on Sun Oct  5 03:03:09 2014
